# rusty-panel

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md  rusty-panel.toml
scripts/: copy-config.sh  hidraw-rules.sh  install-autostart.sh  install-service.sh
src/: config.rs  lib.rs  main.rs  sleep.rs
