[package]
name = "rusty-panel"
version = "0.1.0"
edition = "2021"
authors = ["Christopher Bond <dan620@gmail.com>"]
description = "A Rust application for handling HID input from PC Panel for linux"
license = "MIT"

[dependencies]
hidapi = "2.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

[dev-dependencies]
