[package]
name = "rusty-panel"
version = "0.1.0"
edition = "2021"
authors = ["Christopher Bond <dan620@gmail.com>"]
description = "A Rust application for handling HID input from PC Panel for linux"
license = "MIT"

[dependencies]
dirs = "6.0"
hidapi = "2.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
log = "0.4"
env_logger = "0.11"
notify = "7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "net", "sync"] }
libc = "0.2"
zbus = { version = "4", default-features = false, features = ["tokio"] }
futures-util = "0.3"

[dev-dependencies]
